conformance_test/positive_tests/07_expressions/0701_operators/070103_relational_operators/NegSem_070103_RelationalOperators_005.ttcn
/******************************************************************************
 * Copyright (c) 2000-2016 Ericsson Telecom AB
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *   Adrien Kirjak – initial implementation
 *
 ** @version  0.0.1
 ** @purpose  1:7.1.3, Ensure that the not equal to operator on address can not be evaluated if value is uninitialized.
 ** @verdict  pass reject
 *****************************************************************/

module NegSem_070103_RelationalOperators_005 {

type component GeneralComp {	    	    
}

type integer address;
    
testcase TC_NegSem_070103_RelationalOperators_005() runs on GeneralComp {
    
    var address My_address;    //uninitialized address type value
    
    
	if (My_address != null) //error
    {
		setverdict(pass, My_address);
	} else {
		setverdict(fail,My_address);
	}
}

control{
    execute(TC_NegSem_070103_RelationalOperators_005());
}

}
